--- a/pyhessian_test.ipynb
+++ b/pyhessian_test.ipynb
@@ -2,17 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append(\"..\")\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,20 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'permutations'",
+     "evalue": "No module named 'data'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m VGG16\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m  tree_ones_like\n\u001b[1;32m      5\u001b[0m model \u001b[38;5;241m=\u001b[39m VGG16(num_classes\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, projection_dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m512\u001b[39m, width_multiplier\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n",
-      "File \u001b[0;32m/fs01/home/ekansh/repos/share/pyhessian-flax/models/__init__.py:4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjax\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjax\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mjnp\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mresnet\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (ResNet18 \u001b[38;5;28;01mas\u001b[39;00m ResNet18, \n\u001b[1;32m      5\u001b[0m                     ResNet20 \u001b[38;5;28;01mas\u001b[39;00m ResNet20, \n\u001b[1;32m      6\u001b[0m                     ResNet34 \u001b[38;5;28;01mas\u001b[39;00m ResNet34, \n\u001b[1;32m      7\u001b[0m                     ResNet50 \u001b[38;5;28;01mas\u001b[39;00m ResNet50,\n\u001b[1;32m      8\u001b[0m                     ResNet101 \u001b[38;5;28;01mas\u001b[39;00m ResNet101)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mvgg\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (VGG16 \u001b[38;5;28;01mas\u001b[39;00m VGG16, \n\u001b[1;32m     11\u001b[0m                   VGG19 \u001b[38;5;28;01mas\u001b[39;00m VGG19)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mclip_model\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (ViTB16 \u001b[38;5;28;01mas\u001b[39;00m ViTB16, \n\u001b[1;32m     14\u001b[0m                          ViTB32 \u001b[38;5;28;01mas\u001b[39;00m ViTB32, \n\u001b[1;32m     15\u001b[0m                          ViTL14 \u001b[38;5;28;01mas\u001b[39;00m ViTL14, \n\u001b[1;32m     16\u001b[0m                          get_zero_shot_params \u001b[38;5;28;01mas\u001b[39;00m get_zero_shot_params)\n",
-      "File \u001b[0;32m/fs01/home/ekansh/repos/share/pyhessian-flax/models/resnet.py:17\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjax\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01meinops\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m rearrange\n\u001b[0;32m---> 17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpermutations\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m PermutationSpec, permutation_spec_from_axes_to_perm, conv_axes_to_perm, dense_axes_to_perm, norm_axes_to_perm\n\u001b[1;32m     20\u001b[0m ModuleDef \u001b[38;5;241m=\u001b[39m Any\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mResNetBlock\u001b[39;00m(nn\u001b[38;5;241m.\u001b[39mModule):\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'permutations'"
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m VGG16\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m  tree_ones_like\n\u001b[1;32m      5\u001b[0m model \u001b[38;5;241m=\u001b[39m VGG16(num_classes\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, projection_dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m512\u001b[39m, width_multiplier\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n",
+      "File \u001b[0;32m/fs01/home/ekansh/repos/share/pyhessian-flax/models/__init__.py:13\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mresnet\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (ResNet18 \u001b[38;5;28;01mas\u001b[39;00m ResNet18, \n\u001b[1;32m      5\u001b[0m                     ResNet20 \u001b[38;5;28;01mas\u001b[39;00m ResNet20, \n\u001b[1;32m      6\u001b[0m                     ResNet34 \u001b[38;5;28;01mas\u001b[39;00m ResNet34, \n\u001b[1;32m      7\u001b[0m                     ResNet50 \u001b[38;5;28;01mas\u001b[39;00m ResNet50,\n\u001b[1;32m      8\u001b[0m                     ResNet101 \u001b[38;5;28;01mas\u001b[39;00m ResNet101)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mvgg\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (VGG16 \u001b[38;5;28;01mas\u001b[39;00m VGG16, \n\u001b[1;32m     11\u001b[0m                   VGG19 \u001b[38;5;28;01mas\u001b[39;00m VGG19)\n\u001b[0;32m---> 13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mclip_model\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (ViTB16 \u001b[38;5;28;01mas\u001b[39;00m ViTB16, \n\u001b[1;32m     14\u001b[0m                          ViTB32 \u001b[38;5;28;01mas\u001b[39;00m ViTB32, \n\u001b[1;32m     15\u001b[0m                          ViTL14 \u001b[38;5;28;01mas\u001b[39;00m ViTL14, \n\u001b[1;32m     16\u001b[0m                          get_zero_shot_params \u001b[38;5;28;01mas\u001b[39;00m get_zero_shot_params)\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcreate_model\u001b[39m(\u001b[38;5;241m*\u001b[39m, model_cls, num_classes, half_precision, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m     19\u001b[0m   platform \u001b[38;5;241m=\u001b[39m jax\u001b[38;5;241m.\u001b[39mlocal_devices()[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mplatform\n",
+      "File \u001b[0;32m/fs01/home/ekansh/repos/share/pyhessian-flax/models/clip_model.py:13\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjax\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtransformers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (AutoConfig, \n\u001b[1;32m      9\u001b[0m                           FlaxCLIPModel,\n\u001b[1;32m     10\u001b[0m                           FlaxCLIPVisionModel\n\u001b[1;32m     11\u001b[0m                           )\n\u001b[0;32m---> 13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdata\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtemplates\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_templates\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdata\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01minput_pipeline\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_dataset_info\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtqdm\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'data'"
      ]
     }
    ],
